laravel-mysql-service-app.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: appc
  name: appc
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    run: appc
  type: NodePort
status:
  loadBalancer: {}
