laravel-mysql-service-db.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: dbc
  name: dbc
spec:
  ports:
  - port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    run: dbc
  type: ClusterIP
status:
  loadBalancer: {}
